HG553: finally configured the flash under OpenOCD.

--- a/HG553/vodafone.cfg
+++ b/HG553/vodafone.cfg
@@ -22,7 +22,7 @@ reset_config trst_and_srst
 buspirate_port /dev/ttyUSB0
 
 set _FLASHNAME $_CHIPNAME.flash
-#4mb
-#flash bank $_FLASHNAME cfi 0x1fc00000 0x00400000 2 2 $_TARGETNAME
-#8MB
-flash bank $_FLASHNAME cfi 0x1f800000 0x00800000 2 2 $_TARGETNAME
+# this model has 16mib
+# I don't know bc starts at 0xbe000000 instead of 0xbfc00000
+# but I found the address into this post <https://onetransistor.blogspot.it/2016/02/debrick-huawei-hg553-brcm6358-cfe.html>
+flash bank $_FLASHNAME cfi 0xbe000000 0x1000000 2 2 $_TARGETNAME
