Pico/tcc-emu: emulate firmware mmapping it.

--- a/Pico SP-H03/Makefile
+++ b/Pico SP-H03/Makefile
@@ -1,8 +1,9 @@
 CFLAGS=-Wall
-LDLIBS=-lusb
+
 
 TARGETS  = tcctool
 TARGETS += tccvirus.bin
+TARGETS += tcc-emu
 
 all: $(TARGETS)
 
@@ -10,6 +11,9 @@ tccvirus.bin: tccvirus.s
 	arm-none-eabi-as -Wall $^ -o tccvirus.o
 	arm-none-eabi-ld -Ttccvirus.ld tccvirus.o -o tccvirus
 	arm-none-eabi-objcopy -O binary tccvirus tccvirus.bin
+
+tcc-emu: CC=arm-linux-gnueabi-gcc
+tcctool: LDLIBS+=-lusb
 
 clean:
 	rm -vfr $(TARGETS)
