MiraScreen: actions-tools now decompress FIRM.

--- a/MiraScreen/actions-tools/Makefile
+++ b/MiraScreen/actions-tools/Makefile
@@ -1,7 +1,10 @@
-BINS = checksum
+BINS = actions-tools
 
 all: $(BINS)
 
+actions-tools: actions-tools.o z.o checksum.o firm.o
+actions-tools: LDFLAGS=-lz
+
 clean:
-	rm -vfr $(BINS)
+	rm -vfr $(BINS) *.o
 
