actions-tools: now unpack firmwares.

--- a/MiraScreen/actions-tools/Makefile
+++ b/MiraScreen/actions-tools/Makefile
@@ -3,7 +3,8 @@ BINS = actions-tools
 all: $(BINS)
 
 actions-tools: actions-tools.o z.o checksum.o firm.o
-actions-tools: LDFLAGS=-lz
+actions-tools: CPPFLAGS+=-g
+actions-tools: LDLIBS=-lz
 
 clean:
 	rm -vfr $(BINS) *.o
