PowKiddy: usb baremetal is not working.

--- a/powkiddy/baremetal/Makefile
+++ b/powkiddy/baremetal/Makefile
@@ -11,20 +11,23 @@
 MIPSEL_PREFIX = mips-linux-gnu-
 MIPSEL_OPTIONS = -march=4kec -EL -Wall
 MIPSEL_LD_OPTIONS = -EL
-%.bin: %.c startup.o
+%.bin: %.c startup_%.o
 	$(MIPSEL_PREFIX)gcc $(MIPSEL_OPTIONS) -fno-plt -fno-pic -c $<
-	$(MIPSEL_PREFIX)ld $(MIPSEL_LD_OPTIONS) -Tadfu.ld startup.o $*.o -o $*.elf
+	$(MIPSEL_PREFIX)ld $(MIPSEL_LD_OPTIONS) -T$*.ld startup_$*.o $*.o -o $*.elf
 	$(MIPSEL_PREFIX)objcopy -O binary $*.elf $@
 
-startup.o: startup.S
+%.o: %.S
 	$(MIPSEL_PREFIX)gcc $(MIPSEL_OPTIONS) -fno-plt -fno-pic -c $<
 
 %.encrypted: %
 	../../meta/actions/adfuload encrypt $< > $@
 
 upload_%: %.bin.encrypted
-	PYTHONPATH=../../meta/actions/ python3 -m adfu.exe --device 10d6:10d6  --binary $<
+	PYTHONPATH=../../meta/actions/ python3 -m adfu.exe --device 10d6:10d6 --address $(ENTRY_ADDRESS) --binary $<
+
+upload_uart: ENTRY_ADDRESS=0xb4060000
+upload_usb: ENTRY_ADDRESS=0xb4061000
 
 
 clean:
-	rm -f uart.bin.encrypted uart.bin startup.o
+	rm -f uart.bin.encrypted uart.bin startup_*.o usb.bin.*
