PowKiddy/baremetal: add example code to hijack exceptions/irqs vector table.

--- a/powkiddy/baremetal/Makefile
+++ b/powkiddy/baremetal/Makefile
@@ -8,13 +8,24 @@
 #  $ mipsel-linux-gnu-objdump -b binary -mmips:isa32 -EL -D virus.bin
 #
 # to see the result
+
+# GENERAL COMPILER OPTIONS
 MIPSEL_PREFIX = mips-linux-gnu-
 MIPSEL_OPTIONS = -march=4kec -EL -Wall
 MIPSEL_LD_OPTIONS = -EL
-%.bin: %.c startup_%.o
+
+
+# TARGETS ###########################
+%.bin: %.c startup_%.o %.ld
 	$(MIPSEL_PREFIX)gcc $(MIPSEL_OPTIONS) -fno-plt -fno-pic -c $<
 	$(MIPSEL_PREFIX)ld $(MIPSEL_LD_OPTIONS) -T$*.ld startup_$*.o $*.o -o $*.elf
 	$(MIPSEL_PREFIX)objcopy -O binary $*.elf $@
+
+# allow for the linker script to use #defines
+%.ld: %.ld.in
+	@echo "LDS	$@"
+	$(CPP) -x assembler-with-cpp -P -D__ASSEMBLY__  -o $@ $<
+
 
 %.o: %.S
 	$(MIPSEL_PREFIX)gcc $(MIPSEL_OPTIONS) -fno-plt -fno-pic -c $<
@@ -27,7 +38,7 @@ upload_%: %.bin.encrypted
 
 upload_uart: ENTRY_ADDRESS=0xb4060000
 upload_usb: ENTRY_ADDRESS=0xb4061000
-
+upload_exceptions: ENTRY_ADDRESS=0xb4060000
 
 clean:
-	rm -f uart.bin.encrypted uart.bin startup_*.o usb.bin.*
+	rm -f uart.bin.encrypted uart.bin startup_*.o usb.bin.* exceptions.bin* exceptions.ld
