--- a/powkiddy/open-adec/Makefile
+++ b/powkiddy/open-adec/Makefile
@@ -18,6 +18,7 @@ SOURCES_C += utils.c
 SOURCES_C += exceptions.c
 SOURCES_C += log.c
 SOURCES_C += brom.c
+SOURCES_C += assert.c
 
 SOURCES_S  = crt0.S
 SOURCES_S += eirq.S
