open-adec: create "oa", a tool to dump flash and other things.

--- a/powkiddy/open-adec/open-adec.ld.in
+++ b/powkiddy/open-adec/open-adec.ld.in
@@ -33,7 +33,7 @@
 #define EIRQ_SIZE 0x1800
 
 #define BSS_START EIRQ_START + EIRQ_SIZE
-#define BSS_SIZE  0xa00
+#define BSS_SIZE  0xc00
 
 MEMORY {
     stack (RW)         : ORIGIN = IRAM_START, LENGTH = STACK_SIZE
