--- a/powkiddy/open-adec/open-adec.ld.in
+++ b/powkiddy/open-adec/open-adec.ld.in
@@ -16,6 +16,7 @@
  * You should have received a copy of the GNU General Public License
  * along with open-adec.  If not, see <http://www.gnu.org/licenses/>.
  */
+#include <config.h>
 
 MEMORY {
     IRAM (RW) : ORIGIN = ENTRY_ADDRESS, LENGTH = IRAM_SIZE
